--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         classpath "org.grails.plugins:hibernate5:6.0.4"
         classpath "com.bertramlabs.plugins:asset-pipeline-gradle:2.11.6"
         classpath "org.grails.plugins:views-gradle:1.1.2"
+        classpath "org.grails.plugins:hibernate5:6.0.3"
     }
 }
 
@@ -29,6 +30,7 @@ apply plugin:"org.grails.plugins.views-json"
 
 repositories {
     mavenLocal()
+    jcenter()
     maven { url "https://repo.grails.org/grails/core" }
 }
 
@@ -66,8 +68,13 @@ dependencies {
     compile "org.hibernate:hibernate-ehcache:5.1.2.Final"
     compile "org.grails.plugins:views-json"
     compile "org.grails.plugins:views-json-templates"
+    compile 'org.grails.plugins:postgresql-extensions:4.6.2'
+    compile "org.grails.plugins:hibernate5"
+    compile "org.hibernate:hibernate-core:5.1.1.Final"
+    compile "org.hibernate:hibernate-ehcache:5.1.1.Final"
     console "org.grails:grails-console"
     profile "org.grails.profiles:angular"
+    provided 'org.postgresql:postgresql:9.4.1211.jre7'
     runtime "com.h2database:h2"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.11.6"
     testCompile "org.grails:grails-plugin-testing"
