--- a/grails-app/conf/application.yml
+++ b/grails-app/conf/application.yml
@@ -62,6 +62,7 @@ grails:
 
 ---
 hibernate:
+    dialect: net.kaleidos.hibernate.PostgresqlExtensionsDialect
     cache:
         queries: false
         use_second_level_cache: true
@@ -71,23 +72,22 @@ hibernate:
 dataSource:
     pooled: true
     jmxExport: true
-    driverClassName: org.h2.Driver
-    username: sa
-    password:
+    driverClassName: org.postgresql.Driver
+    dbCreate: update
 
 environments:
     development:
         dataSource:
-            dbCreate: create-drop
-            url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:postgresql://localhost:5432/grails
+            username: grails
+            password: grails
     test:
         dataSource:
-            dbCreate: update
-            url: jdbc:h2:mem:testDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:postgresql://localhost:5432/grails
     production:
         dataSource:
             dbCreate: none
-            url: jdbc:h2:./prodDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+            url: jdbc:postgresql://localhost:5432/grails
             properties:
                 jmxEnabled: true
                 initialSize: 5
