--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ repositories {
     mavenLocal()
     jcenter()
     maven { url "https://repo.grails.org/grails/core" }
+    maven { url "https://repo.grails.org/grails/repo" }
 }
 
 dependencyManagement {
@@ -72,10 +73,10 @@ dependencies {
     compile "org.grails.plugins:hibernate5"
     compile "org.hibernate:hibernate-core:5.1.1.Final"
     compile "org.hibernate:hibernate-ehcache:5.1.1.Final"
+    compile "org.mindrot:jbcrypt:0.3m"
     console "org.grails:grails-console"
     profile "org.grails.profiles:angular"
     provided 'org.postgresql:postgresql:9.4.1211.jre7'
-    runtime "com.h2database:h2"
     runtime "com.bertramlabs.plugins:asset-pipeline-grails:2.11.6"
     testCompile "org.grails:grails-plugin-testing"
     testCompile "org.grails.plugins:geb"
